Grand Economy now acts as a bridge to other economies, if the config option is set
When using Grand Economy currency, Grand Economy is now registered as an economy in Sponge