@@ -1,13 +1,13 @@
 package the_fireplace.grandeconomy.commands;
 
-import the_fireplace.grandeconomy.api.GrandEconomyApi;
-import the_fireplace.grandeconomy.econhandlers.ge.Account;
 import net.minecraft.command.CommandBase;
 import net.minecraft.command.CommandException;
 import net.minecraft.command.ICommandSender;
 import net.minecraft.command.WrongUsageException;
 import net.minecraft.entity.player.EntityPlayer;
+import net.minecraft.entity.player.EntityPlayerMP;
 import net.minecraft.server.MinecraftServer;
+import the_fireplace.grandeconomy.api.GrandEconomyApi;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
@@ -34,7 +34,8 @@ public class CommandBalance extends CommandBase {
         throw new WrongUsageException("/balance can only be used by players.");
     }
 
+    @Override
     public boolean checkPermission(MinecraftServer server, ICommandSender sender) {
-        return true;
+        return sender instanceof EntityPlayerMP;
     }
 }
